# hernaaa

./: BUILD.bat  CHANGELOG_KIERO.md  CLEAN.bat  COMPILE_IMGUI.bat  COMPILE_IMGUI_SIMPLE.bat  DeftHack.csproj  DeftHack_Modern.csproj  Directory.Build.props  Directory.Build.targets  GIT_PUSH_UPDATE.bat  Inject.bat  Injector.cs  Injector.csproj  README.md  TEST_GUI.bat  load.cs  БЫСТРЫЙ_СТАРТ_KIERO.md  ГОТОВО_ВСЕ_ИСПРАВЛЕНО.txt  ГОТОВО_ОБНОВЛЕНИЕ_KIERO.txt  ИНСТРУКЦИЯ.md  ИНСТРУКЦИЯ_ИНЖЕКЦИЯ.md  ИНСТРУКЦИЯ_КОМПИЛЯЦИЯ_IMGUI.md  ПРОБЛЕМА_И_РЕШЕНИЕ.txt  СТРУКТУРА.md  ⚠️_ЧИТАЙ_МЕНЯ_СНАЧАЛА.txt  ⚡_ОБНОВЛЕНИЕ_KIERO.txt  ✅_ЗАГРУЖЕНО_НА_GITHUB.txt  ✅_ОБНОВЛЕНО_НА_GITHUB.txt
DeftHack/Compatibility/: UnturnedAPI.cs
DeftHack/Components/Advanced/: AdvancedESP.cs  AdvancedPlayerManager.cs
DeftHack/Components/Basic/: HotkeyComponent.cs  MiscComponent.cs  OptimizationComponent.cs  SpectatorComponent.cs  TriggerbotComponent.cs
DeftHack/Components/UI/: ESPComponent.cs  ImGuiCheat.cs  InjectionVerifier.cs  NamedPipeVerifier.cs  SharedMemoryVerifier.cs  SimpleGUI.cs  TestGUI.cs  TrajectoryComponent.cs  WeaponComponent.cs
DeftHack/Components/UI/Menu/: MenuComponent.cs
DeftHack/Components/UI/Menu/Tabs/: InfoTab.cs  MiscTab.cs  ModernSecurityTab.cs  MoreMiscTab.cs  PlayersTab.cs  SecurityTab.cs  StatsTab.cs
DeftHack/Components/UI/Modern/: ModernGUI.cs
DeftHack/Core/: ModuleInitializer.cs
DeftHack/Coroutines/: ESPCoroutines.cs  PlayerCoroutines.cs
DeftHack/Managers/Main/: AttributeManager.cs
DeftHack/Managers/Submanagers/: OverrideManager.cs
DeftHack/Options/: MiscOptions.cs
DeftHack/Overrides/: OV_DamageTool.cs  OV_Input.cs  OV_PlayerDashboardInformationUI.cs  OV_PlayerDashboardInventoryUI.cs  OV_PlayerEquipment.cs  OV_PlayerInput.cs  OV_PlayerInteract.cs  OV_PlayerUI.cs  OV_UseableGun.cs  OV_UseableMelee.cs
DeftHack/Security/: AdvancedScreenshotBypass.cs  AdvancedThreatDetection.cs  ExternalAnalysis.cs  HyperVBypass.cs  HypervisorBypass.cs  IntelligentAdaptation.cs  KernelBypass.cs  ModernBypass.cs  SecurityManager.cs  StealthHypervisor.cs
DeftHack/Utilities/: RaycastUtilities.cs  SkinsUtilities.cs
DeftHack/Variables/: OptimizationVariables.cs
DeftHack/Wrappers/: OverrideWrapper.cs
DeftHack_ImGui/: .gitignore  CHECK_ENV.bat  CMakeLists.txt  COMPILE_ALL.bat  COMPILE_AND_INSTALL.bat  COMPILE_CMAKE.bat  COMPILE_WITH_KIERO.bat  COMPILE_WITH_MINHOOK.bat  Compile.bat  QuickCompile.bat  README.md  SETUP_MINHOOK.bat  deffhack_gui.hpp  main.cpp  renderer.hpp  renderer_kiero.hpp  setup_imgui.bat  БЫСТРЫЙ_СТАРТ.md  ИНСТРУКЦИЯ_KIERO.md  ПОЛНАЯ_ИНСТРУКЦИЯ_СБОРКИ.md
DeftHack_ImGui/kiero-1.2.12/: kiero.cpp  kiero.h
